--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0 auto;
-  padding: 80px;
+  padding: 80px 80px 0;
   width: 1280px;
   background-color: #F5F4F0;
   color: #333333;
@@ -24,14 +24,17 @@ h1, h2, h3 {
 }
 
 h1 {
+  margin: 8px 0 44px;
   font-size: 36px;
 }
 
 h2 {
+  margin: 2px 0 8px;
   font-size: 32px;
 }
 
 h3 {
+  margin: 20px 0 4px;
   font-size: 28px;
 }
 
@@ -46,16 +49,39 @@ header img {
 }
 
 header p {
+  margin: 24px 0 40px;
   text-align: center;
   font-style: italic;
+}
+
+.divider {
+  height: 1px;
+  width: 100%;
+  background-color: #D9D9D9;
+}
+
+main {
+  margin-top: 64px;
 }
 
 main img {
   height: 350px;
 }
 
+section {
+  margin-bottom: 16px;
+}
+
+article img {
+  margin-top: 48px;
+}
+
 span:has(+ ul) {
   font-weight: bold;
+}
+
+ul {
+  margin-left: 24px;
 }
 
 li {
@@ -72,6 +98,20 @@ li:nth-child(3) {
   color: #E95E10;
 }
 
+article + .divider {
+  margin: 40px 0 40px;
+}
+
+.divider + p {
+  text-align: center;
+}
+
 footer {
+  margin: 64px 0 48px;
   font-family: "Alice", serif;
+  text-align: center;
+}
+
+footer img {
+  vertical-align: middle;
 }
